--- a/demo.html
+++ b/demo.html
@@ -9,10 +9,10 @@
     </body>
     <script>
         function callApi() {
-            var apiInfo = 'asefas_efjhj-afsd64sf_megaToken';
+            var apiInfo = 'asefas_efjhj-afsd64sf';
             var dataLog = [{data: "Message test"}];
             var level = 'info';
-            _MEGALOGGER.clientLib._pushLog(apiInfo, dataLog, level, 'test_log');
+            _MEGALOGGER.logger._pushLog(apiInfo, dataLog, level, 'test_log');
         }
     </script>
 </html>
