change class name

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
             var apiKey = 'asefas_efjhj-afsd64sf';
             var dataLog = [{data: "Message test"}];
             var level = 'info';
-            var Logger = new MegaLogger(apiKey, 'source');
+            var Logger = new MEGALOGGER(apiKey, 'source');
             Logger.log(dataLog, level);
         }
     </script>
