update title for data logger

--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
                 source: source
             };
             // Log
-            var dataLog = [{data: "Message test"}];
+            var dataLog = {title: "Title", body: "Message test"};
             // level for log include: info, debug, warning, error, critical 
             var level = 'info';
             // push log
